[metadata]
name = hoodlt
version = 1.0.0
author = Alex Travesset
url = https://bitbucket.org/trvsst/hoodlt
description = Suite of Packages for all things nanoparticles
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License

[options]
packages = find:
zip_safe = False
install_requires =
	numpy >= 1.15.0
	matplotlib >= 3.0.0
	scipy >= 1.0.0
	freud-analysis >= 2.0.0
	pandas >= 1.0.0
	rowan >= 1.2.1
include_package_data = True

[options.package_data]
Data = *.xlsx
Data.Forcefield = *.xlsx
